  and PDF format is available on the file `download area`_ on SourceForge.net.
  Closes: :issue:`172`.

- Improved runtime checks on dynamic loading of libraries: meaningful error
  messages are generated in case of failure.
  Also, now PyTables no more alters the system PATH.
  Closes :issue:`178` and :issue:`179` (thanks to Christoph Gohlke).


Deprecations
------------

- The use of upper-case keyword arguments in the :func:`openFile` function
  and the :class:`File` class initializer is now deprecated.  All parameters
  defined in the :file:`tables/parameters.py` module can still be passed as
  keyword argument to the :func:`openFile` function just using a lower-case
  version of the parameter name.


API changes
-----------

Many deprecated features and support for obsolete modules has been dropped:

- The deprecated :data:`is_pro` module constant has been removed

- The nra module and support for the obsolete numarray module has been removed.
  The *numarray* flavor is no more supported as well (closes :issue:`107`).

- Support for the obsolete Numeric module has been removed.
  The *numeric* flavor is no more available (closes :issue:`108`).

- The tables.netcdf3 module has been removed (closes :issue:`68`).

- The :data:`parameters.MAX_THREADS` configuration parameter has been dropped
  in favour of :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).

- The `__version__` module constants has been removed from almost all the
  modules (it was no ore used after the switch to Git).
  Of course the package level constant (:data:`tables.__version__`) still
  remains.  Closes :issue:`112`.

- The :meth:`File.createExternalLink` method no more has a keyword parameter
  named *warn16incompat*.  It was deprecated since PyTables 2.4.

- The deprecated :exc:`exceptions.Incompat16Warning` exception has been
  removed


Bugs fixed
----------

- Better check access on closed files (closes: :issue:`62`)

