@@ -59,7 +59,7 @@ int pid = 0;                    /* the PID for this process */
 /* Global variables for threads */
 int32_t nthreads = 1;            /* number of desired threads in pool */
 int32_t init_threads_done = 0;   /* pool of threads initialized? */
-int32_t end_threads = 0;         /* should exisiting threads end? */
+int32_t end_threads = 0;         /* should existing threads end? */
 int32_t init_sentinels_done = 0; /* sentinels initialized? */
 int32_t giveup_code;             /* error code when give up */
 int32_t nblock;                  /* block counter */
@@ -75,7 +75,7 @@ pthread_attr_t ct_attr;          /* creation time attributes for threads */
 #define _POSIX_BARRIERS_MINE
 #endif
 
-/* Syncronization variables */
+/* Synchronization variables */
 pthread_mutex_t count_mutex;
 #ifdef _POSIX_BARRIERS_MINE
 pthread_barrier_t barr_init;
@@ -171,7 +171,7 @@ uint8_t *my_malloc(size_t size)
 
 #if defined(_WIN32)
   /* A (void *) cast needed for avoiding a warning with MINGW :-/ */
-  block	=   (void *)_aligned_malloc(size, 16);
+  block = (void *)_aligned_malloc(size, 16);
 #elif defined __APPLE__
   /* Mac OS X guarantees 16-byte alignment in small allocs */
   block = malloc(size);
@@ -184,7 +184,7 @@ uint8_t *my_malloc(size_t size)
 
   if (block == NULL || res != 0) {
     printf("Error allocating memory!");
-    exit(1);
+    return NULL;
   }
 
   return (uint8_t *)block;
@@ -261,8 +261,8 @@ static int blosc_c(uint32_t blocksize, int32_t leftoverblock,
   neblock = blocksize / nsplits;
   for (j = 0; j < nsplits; j++) {
     dest += sizeof(int32_t);
-    ntbytes += sizeof(int32_t);
-    ctbytes += sizeof(int32_t);
+    ntbytes += (uint32_t)sizeof(int32_t);
+    ctbytes += (int32_t)sizeof(int32_t);
     maxout = neblock;
     if (ntbytes+maxout > maxbytes) {
       maxout = maxbytes - ntbytes;   /* avoid buffer overrun */
@@ -331,7 +331,7 @@ static int blosc_d(uint32_t blocksize, int32_t leftoverblock,
   for (j = 0; j < nsplits; j++) {
     cbytes = sw32(((uint32_t *)(src))[0]);   /* amount of compressed bytes */
     src += sizeof(int32_t);
-    ctbytes += sizeof(int32_t);
+    ctbytes += (int32_t)sizeof(int32_t);
     /* Uncompress */
     if (cbytes == neblock) {
       memcpy(_tmp, src, neblock);
@@ -462,7 +462,7 @@ int parallel_blosc(void)
 
 
 /* Convenience functions for creating and releasing temporaries */
-void create_temporaries(void)
+int create_temporaries(void)
 {
   int32_t tid;
   uint32_t typesize = params.typesize;
@@ -470,12 +470,20 @@ void create_temporaries(void)
   /* Extended blocksize for temporary destination.  Extended blocksize
    is only useful for compression in parallel mode, but it doesn't
    hurt serial mode either. */
-  uint32_t ebsize = blocksize + typesize*sizeof(int32_t);
+  uint32_t ebsize = blocksize + typesize*(uint32_t)sizeof(int32_t);
 
   /* Create temporary area for each thread */
   for (tid = 0; tid < nthreads; tid++) {
-    params.tmp[tid] = my_malloc(blocksize);
-    params.tmp2[tid] = my_malloc(ebsize);
+    uint8_t *tmp = my_malloc(blocksize);
+    if (tmp == NULL) {
+      return -1;
+    }
+    params.tmp[tid] = tmp;
+    uint8_t *tmp2 = my_malloc(ebsize);
+    if (tmp2 == NULL) {
+      return -1;
+    }
+    params.tmp2[tid] = tmp2;
   }
 
   init_temps_done = 1;
@@ -483,6 +491,7 @@ void create_temporaries(void)
   current_temp.nthreads = nthreads;
   current_temp.typesize = typesize;
   current_temp.blocksize = blocksize;
+  return 0;
 }
 
 
@@ -507,13 +516,19 @@ int do_job(void) {
 
   /* Initialize/reset temporaries if needed */
   if (!init_temps_done) {
-    create_temporaries();
+    int ret = create_temporaries();
+    if (ret < 0) {
+      return -1;
+    }
   }
   else if (current_temp.nthreads != nthreads ||
            current_temp.typesize != params.typesize ||
            current_temp.blocksize != params.blocksize) {
     release_temporaries();
-    create_temporaries();
+    int ret = create_temporaries();
+    if (ret < 0) {
+      return -1;
+    }
   }
 
   /* Run the serial version when nthreads is 1 or when the buffers are
@@ -592,7 +607,7 @@ int32_t compute_blocksize(int32_t clevel, uint32_t typesize, int32_t nbytes)
 
 /* The public routine for compression.  See blosc.h for docstrings. */
 int blosc_compress(int clevel, int doshuffle, size_t typesize, size_t nbytes,
-		   const void *src, void *dest, size_t destsize)
+      const void *src, void *dest, size_t destsize)
 {
   uint8_t *_dest=NULL;         /* current pos for destination buffer */
   uint8_t *flags;              /* flags for header.  Currently booked:
@@ -610,10 +625,11 @@ int blosc_compress(int clevel, int doshuffle, size_t typesize, size_t nbytes,
   /* Check buffer size limits */
   if (nbytes > BLOSC_MAX_BUFFERSIZE) {
     /* If buffer is too large, give up. */
-    fprintf(stderr, "Input buffer size cannot exceed %d MB\n",
-            BLOSC_MAX_BUFFERSIZE / MB);
-    exit(1);
+    fprintf(stderr, "Input buffer size cannot exceed %d bytes\n",
+            BLOSC_MAX_BUFFERSIZE);
+    return -1;
   }
+
   /* We can safely do this assignation now */
   nbytes_ = (uint32_t)nbytes;
 
@@ -693,6 +709,9 @@ int blosc_compress(int clevel, int doshuffle, size_t typesize, size_t nbytes,
   if (!(*flags & BLOSC_MEMCPYED)) {
     /* Do the actual compression */
     ntbytes = do_job();
+    if (ntbytes < 0) {
+      return -1;
+    }
     if ((ntbytes == 0) && (nbytes_+BLOSC_MAX_OVERHEAD <= maxbytes)) {
       /* Last chance for fitting `src` buffer in `dest`.  Update flags
        and do a memcpy later on. */
@@ -711,6 +730,9 @@ int blosc_compress(int clevel, int doshuffle, size_t typesize, size_t nbytes,
        cache size or multi-cores */
       params.ntbytes = BLOSC_MAX_OVERHEAD;
       ntbytes = do_job();
+      if (ntbytes < 0) {
+	return -1;
+      }
     }
     else {
       memcpy((uint8_t *)dest+BLOSC_MAX_OVERHEAD, src, nbytes_);
@@ -786,6 +808,9 @@ int blosc_decompress(const void *src, void *dest, size_t destsize)
       /* More effective with large buffers that are multiples of the
        cache size or multi-cores */
       ntbytes = do_job();
+      if (ntbytes < 0) {
+	return -1;
+      }
     }
     else {
       memcpy(dest, (uint8_t *)src+BLOSC_MAX_OVERHEAD, nbytes);
@@ -795,6 +820,9 @@ int blosc_decompress(const void *src, void *dest, size_t destsize)
   else {
     /* Do the actual decompression */
     ntbytes = do_job();
+    if (ntbytes < 0) {
+      return -1;
+    }
   }
 
   assert(ntbytes <= (int32_t)destsize);
@@ -861,7 +889,13 @@ int blosc_getitem(const void *src, int start, int nitems, void *dest)
   /* Initialize temporaries if needed */
   if (tmp == NULL || tmp2 == NULL || current_temp.blocksize < blocksize) {
     tmp = my_malloc(blocksize);
+    if (tmp == NULL) {
+      return -1;
+    }
     tmp2 = my_malloc(blocksize);
+    if (tmp2 == NULL) {
+      return -1;
+    }
     tmp_init = 1;
   }
 
@@ -891,7 +925,7 @@ int blosc_getitem(const void *src, int start, int nitems, void *dest)
     if (flags & BLOSC_MEMCPYED) {
       /* We want to memcpy only */
       memcpy((uint8_t *)dest + ntbytes,
-	     (uint8_t *)src + BLOSC_MAX_OVERHEAD + j*blocksize + startb,
+          (uint8_t *)src + BLOSC_MAX_OVERHEAD + j*blocksize + startb,
              bsize2);
       cbytes = bsize2;
     }
@@ -967,7 +1001,7 @@ void *t_blosc(void *tids)
 
     /* Get parameters for this thread before entering the main loop */
     blocksize = params.blocksize;
-    ebsize = blocksize + params.typesize*sizeof(int32_t);
+    ebsize = blocksize + params.typesize*(uint32_t)sizeof(int32_t);
     compress = params.compress;
     flags = params.flags;
     maxbytes = params.maxbytes;
